drop java plugin ,for test